# msg

./: README.md  pyproject.toml
src/msg/: main.py
