[project]
name = "msg"
dynamic = ["version"]
description = "Mini Scope GUI (MSG)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6==6.8.0.2",
    "matplotlib==3.10.0",
    "pytide6 @ git+https://github.com/priimak/PyTide6.git@v0.5.0",
    "inctrl @ git+https://github.com/priimak/inctrl.git"
]

[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.png"]

[project.scripts]
msg = "msg.main:main"
